# DS_study

./: CLAUDE.md  L_1_1_Statistical_learning.py  pyproject.toml
Lesson_10/: generate_circles.py
Lesson_10/Image_Recognition/: Image_recognition.py
Lesson_1_2/: L_1_2_HTTP_example.py  L_1_2_Random.py  L_1_2_Statistical_learning.py  L_1_2_site_parsing_data_1.py  L_1_2_site_parsing_data_2.py  test_1.txt
Lesson_1_3/: compl_alg_2.py  hw2.py  hw2_detailed.py
Lesson_3/: HW_2.py  L_1_3_Statistical_learning.py  compl_alg_2.py
Lesson_3/files/: anomaly_restoration_with_r2.py  polynom_order_estimator.py
Lesson_4/: alpha-beta_filter_research.md
Lesson_4/files/: filters_comparison.py
Lesson_5/: L_1_5_non-linear_regression.py
Lesson_5/bds/: bds_sympy.py
Lesson_6/: CP_SAT_Solver_example.py  CP_SAT_Solver_example.xlsx  CP_SAT_Solver_test.py
Lesson_7/: HW_5.py
