[project]
name = "datascienceproj"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.7",
    "numpy>=2.3.3",
    "pandas-stubs==2.3.2.250926",
    "pandas>=2.3.3",
    "xlrd>=2.0.2",
    "scipy>=1.16.2",
    "scipy-stubs==1.16.2.4",
    "seaborn==0.13.2",
    "openpyxl==3.2.0b1",
    "requests>=2.32.5",
    "beautifulsoup4>=4.14.2",
    "lxml>=6.0.2",
]
