[project]
name = "datascienceproj"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
    "pandas-stubs>=2.3.3.251201",
    "pandas>=2.3.3",
    "xlrd>=2.0.2",
    "scipy>=1.16.3",
    "scipy-stubs==1.16.3.2",
    "seaborn==0.13.2",
    "openpyxl==3.2.0b1",
    "requests>=2.32.5",
    "beautifulsoup4>=4.14.3",
    "lxml>=6.0.2",
    "scikit-learn>=1.7.2",
]
