[project]
name = "datascienceproj"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
    "pandas-stubs>=2.3.3.251201",
    "pandas>=2.3.3",
    "xlrd>=2.0.2",
    "scipy>=1.16.3",
    "scipy-stubs==1.16.3.2",
    "seaborn==0.13.2",
    "openpyxl==3.2.0b1",
    "requests>=2.32.5",
    "beautifulsoup4>=4.14.3",
    "lxml>=6.0.2",
    "scikit-learn>=1.7.2",
    "opencv-python>=4.11.0.86",
    "sympy>=1.14.0",
    "ortools>=9.14.6206",
    "wordcloud>=1.9.6",
    "speechrecognition>=3.14.5",
    "sounddevice>=0.5.4",
    "vosk>=0.3.45",
    "ipykernel>=7.1.0",
    "keras>=3.13.2",
    "tensorflow>=2.20.0",
    "google-auth>=2.48.0",
    "google-auth-oauthlib>=1.2.4",
    "google-api-python-client>=2.190.0",
]
